--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
-node_modules
+# Node.js dependencies
+node_modules/
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# Next.js build output
+.next/
+out/
+
+# Environment variables (sensitive data)
 .env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Prisma-related files
+prisma/.dev.db
+prisma/migrations/
+
+# Tailwind and PostCSS cache
+.postcssrc
+tailwind.config.js
+
+# TypeScript cache and build files
+*.tsbuildinfo
+dist/
+*.d.ts.map
+
+# Logs and debug files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor-specific files
+.vscode/
+.idea/
+.DS_Store
+*.swp
+*.swo
+
+# Misc
+*.log
