--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prisma": "^6.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^4.1.2",
     "swr": "^2.3.2"
   },
   "devDependencies": {
